[fix] IOS 모바일 모달 overflow hidden 수정

--- a/server/static/post/detail.css
+++ b/server/static/post/detail.css
@@ -549,9 +549,9 @@
     margin: 0;
   }
 
-  .detailPage__main {
+  /* .detailPage__main {
     overflow-x: hidden;
-  }
+  } */
 
   .row-mode {
     min-height: 800px;
